force-app/main/default/objects/Borrower__c/Borrower__c.object-meta.xml
<CustomObject>
    <label>Borrower</label>
    <nameField>
        <displayFormat>Bid-{000}</displayFormat>
        <label>Borrowed ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Borrowers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>