force-app/main/default/objects/Borrower__c/fields/Bill_Ammount_B__c.field-meta.xml
<CustomField>
    <fullName>Bill_Ammount_B__c</fullName>
    <formula>IF( AND( ISNULL( Days_Remaining_to_Return_Book__c ), Date_of_Return_B__c  &gt;  Date_To_Be_Returned__c )  , MCEILING((Date_of_Return_B__c  - Date_To_Be_Returned__c))*2 , 
 IF((TODAY()-  Date_To_Be_Returned__c )&gt;0, MCEILING((TODAY()-  Date_To_Be_Returned__c ))*2, 0))</formula>
    <label>Bill Ammount B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>