force-app/main/default/objects/Borrower__c/fields/Borrowed_By__c.field-meta.xml
<CustomField>
    <fullName>Borrowed_By__c</fullName>
    <formula>CreatedBy.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrowed By</label>
    <type>Text</type>
</CustomField>