force-app/main/default/objects/Borrower__c/fields/Date_of_Issue_B__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Issue_B__c</fullName>
    <label>Date of Issue</label>
    <required>true</required>
    <type>Date</type>
</CustomField>