force-app/main/default/objects/Borrower__c/fields/Date_of_Return_B__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Return_B__c</fullName>
    <formula>IF(ISPICKVAL( Status__c , &quot;Returned&quot;),
   LastModifiedDate, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Return B</label>
    <type>Date</type>
</CustomField>