force-app/main/default/objects/Borrower__c/fields/Date_To_Be_Returned__c.field-meta.xml
<CustomField>
    <fullName>Date_To_Be_Returned__c</fullName>
    <formula>Date_of_Issue_B__c +30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date To Be Returned</label>
    <type>Date</type>
</CustomField>