force-app/main/default/objects/Borrower__c/fields/Days_Remaining_to_Return_Book__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining_to_Return_Book__c</fullName>
    <formula>IF(ISPICKVAL (Status__c, &quot;Not returned&quot;),  Date_To_Be_Returned__c -TODAY(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining to Return Book</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>