force-app/main/default/objects/Borrower__c/fields/Return_Book__c.field-meta.xml
<CustomField>
    <fullName>Return_Book__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Book</label>
    <type>Checkbox</type>
</CustomField>