force-app/main/default/objects/Borrower__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Book__c</columns>
    <columns>Borrowed_By__c</columns>
    <columns>Date_of_Issue_B__c</columns>
    <columns>Status__c</columns>
    <columns>Date_To_Be_Returned__c</columns>
    <columns>Bill_Ammount_B__c</columns>
    <columns>Date_of_Return_B__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>